# Agricultural-Data-Analytics

./: .gitignore  AGENTS.md  ASSIGNMENT_1.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: agricultural_dashboard.html  field_map.html  my_crops.csv  my_weather.csv
data/assignment-02/: cdl_EPSG4326.csv  fields_EPSG4326.geojson  fields_with_crops.geojson  my_fields_map.html  soil_EPSG4326.csv
data/assignment-05/: sentinel2_field_0_20240715_B4_EPSG4326.tif  sentinel2_field_0_20240715_B8_EPSG4326.tif  sentinel2_field_0_20240715_NDVI_EPSG4326.tif
data/boundaries/: fields.geojson  fields_subset.geojson
docs/project/: assignment-01-tracker.md  assignment-02-tracker.md  assignment-03-tracker.md  assignment-04-tracker.md
guides/: setup_api_keys.md  setup_cloudflare_token.md  setup_github_pat.md
notebooks/: 03_field_eda.ipynb  04_field_mapping.ipynb
reports/: assignment-05-walkthrough.md
scripts/: a2_download_crops.py  a2_download_fields.py  a2_download_fields_alt.py  a2_merge_data.py  a2_stretch_soil.py  a2_stretch_soil_mock.py  a2_visualize_map.py  a3_create_eda_notebook.py  a4_create_mapping_notebook.py  a5_ndvi_calculation.py  ci-local.sh  create_subset.py  fetch_assignment2_data.py  generate_report.py  memory.sh  validate-credentials.sh  visualize_dashboard.py  visualize_fields.py
skills/: SKILL_TEMPLATE.md  __init__.py
skills/cdl-cropland/: SKILL.md
skills/examples/: 01_field_boundaries_example.py  02_chained_download_example.py  03_visualization_example.py  README.md
skills/field-boundaries/: SKILL.md
(+12 files in other folders)
