[project]
name = "agri-data-factory"
version = "0.1.0"
description = "Professional Agricultural Data Analytics Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.1.0",
    "crewai-tools>=0.1.0",
    "pandas>=2.0.0",
    "geopandas>=0.14.0",
    "numpy>=1.26.0",
    "rasterio>=1.3.0",
    "shapely>=2.0.0",
    "netCDF4>=1.6.0",
    "pyarrow>=14.0.0",
    "fiona>=1.9.0",
    "click>=8.1.0",
    "rich>=13.0.0"
]

[project.scripts]
agri-toolkit = "agri_toolkit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/agri-data-toolkit/agri_toolkit"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
select = ["E", "F", "I"] # Pyflakes, pycodestyle errors, isort
ignore = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "packages/agri-data-toolkit/tests"
]
